--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,10 @@
 <body>
 <!--preloader start-->
   <div class="preloader">
-    <div class="preloader-spinner"></div>
+    <div class="p-circle"></div>
+    <div class="p-pic">
+      <img src="./images/face.jpg" alt="">
+    </div>
   </div>
 <!--preloader end-->
 
@@ -29,5 +32,6 @@
 <script src="script/vendor/jquery-3.2.1.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="script/vendor/bootstrap.js"></script>
+<script src="script/main.js"></script>
 </body>
 </html>
