--- a/app/index.html
+++ b/app/index.html
@@ -20,14 +20,17 @@
 </head>
 <body>
 <!--preloader start-->
-  <div class="preloader">
+  <div class="preloader" id="preloader">
     <div class="p-circle"></div>
     <div class="p-pic">
       <img src="./images/face.jpg" alt="">
     </div>
   </div>
 <!--preloader end-->
-
+<header class="header-area">
+  <div class="p-bg">
+  </div>
+</header>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="script/vendor/jquery-3.2.1.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
