--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,33 @@
 <header class="header-area">
   <div class="p-bg">
   </div>
+  <div class="welcome-area">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
+          <div class="welcome-face">
+            <img src="./images/face.jpg" alt="">
+          </div>
+          <div class="welcome-text">
+            <h2>徐步星的简历</h2>
+            <h3>求职：前端开发</h3>
+            <a href="tel:15268636630" class="p-tel">
+              Tel: 15268636630
+            </a>
+          </div>
+          <div class="call-me">
+            <a href="" download><i class="fa fa-download"></i>&nbsp;下载简历</a>
+            <a href="" download><i class="fa fa-envelope-o" aria-hidden="true"></i>&nbsp;发送邮件</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="mouse-button">
+      <a href="">
+        <i class="fa fa-arrow-down" aria-hidden="true"></i>
+      </a>
+    </div>
+  </div>
 </header>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="script/vendor/jquery-3.2.1.js"></script>
