--- a/app/index.html
+++ b/app/index.html
@@ -28,8 +28,49 @@
   </div>
 <!--preloader end-->
 <header class="header-area">
-  <div class="p-bg">
+  <div class="p-bg"></div>
+  <div class="header-top-area">
+    <div id="mainmenu-area-sticky-wrapper">
+      <div class="mainmenu-area" id="mainmenu-area">
+        <nav class="navbar">
+          <div class="container">
+            <div class="navbar-header">
+              <button class="collapsed navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-example-js-navbar-scrollspy">
+                <i class="fa fa-bars" aria-hidden="true"></i>
+              </button>
+              <a href="#" class="navbar-brand">Xuxcf</a>
+            </div>
+            <div class="collapse navbar-collapse bs-example-js-navbar-scrollspy">
+              <ul id="nav">
+                <li>
+                  <a href="#">首页</a>
+                </li>
+                <li>
+                  <a href="#">关于</a>
+                </li>
+                <li>
+                  <a href="#">技能</a>
+                </li>
+                <li>
+                  <a href="#">经验</a>
+                </li>
+                <li>
+                  <a href="#">作品</a>
+                </li>
+                <li>
+                  <a href="#">博客</a>
+                </li>
+                <li>
+                  <a href="#">联系</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </div>
   </div>
+
   <div class="welcome-area">
     <div class="container">
       <div class="row">
@@ -60,6 +101,7 @@
 </header>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="script/vendor/jquery-3.2.1.js"></script>
+<script src="script/vendor/jquery.sticky.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="script/vendor/bootstrap.js"></script>
 <script src="script/main.js"></script>
