添加个人简介和专业技能

--- a/app/index.html
+++ b/app/index.html
@@ -46,22 +46,22 @@
                   <a href="#">首页</a>
                 </li>
                 <li>
-                  <a href="#">关于</a>
+                  <a href="#">个人简介</a>
                 </li>
                 <li>
-                  <a href="#">技能</a>
+                  <a href="#">专业技能</a>
                 </li>
                 <li>
-                  <a href="#">经验</a>
+                  <a href="#">项目经验</a>
                 </li>
                 <li>
-                  <a href="#">作品</a>
+                  <a href="#">我的作品</a>
                 </li>
                 <li>
-                  <a href="#">博客</a>
+                  <a href="#">我的博客</a>
                 </li>
                 <li>
-                  <a href="#">联系</a>
+                  <a href="#">联系方式</a>
                 </li>
               </ul>
             </div>
@@ -99,9 +99,94 @@
     </div>
   </div>
 </header>
+<div class="about-area">
+  <div class="container">
+    <div class="row about-details-content">
+      <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
+        <div class="about-details-content">
+          <h4>欢迎查看我的简历</h4>
+          <p>我是一个性格沉稳、做事认真的人。</p>
+          <p>我喜欢研究所碰到的各种技术，挑战更更有难度的项目。</p>
+          <p>我有两年端开发经验，熟悉 HTML、CSS、Javascript，能熟练开发符合 W3C 标准的页面，熟练使用 Vue, jQuery 框架, 曾用vue做过多个前后端分离项目。</p>
+          <p>我了解后端技术，在从事前端之前用php开发过网站，之后用nodejs和express开发过个人博客。</p>
+          <p>有 Linux 基础，对服务器端开发有一定了解，能够配合程序员完成相关工作。</p>
+          <p>熟悉gulp,webpack等前端构建工具。</p>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
+        <div class="about-details-content">
+          <ul class="list-unstyled">
+            <li><strong><span>姓名：</span></strong>徐步星</li>
+            <li><strong><span>邮箱：</span></strong>xuxcf2010@163.com</li>
+            <li><strong><span>手机：</span></strong>15268636630</li>
+            <li><strong><span>生日：</span></strong>1991-10-12</li>
+            <li><strong><span>居住地：</span></strong>浙江温州</li>
+            <li><strong><span>github：</span></strong><a href="https://github.com/ciming" target="_blank">https://github.com/ciming</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="skill-area">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
+        <h3>我的技能</h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-3 col-sm-6 col-xs-12 item">
+        <div class="c100 big" data-percent="75">
+        </div>
+        <div class="skill-name">HTML</div>
+      </div>
+      <div class="col-md-3 col-sm-6 col-xs-12 item">
+        <div class="c100 big" data-percent="85">
+        </div>
+        <div class="skill-name">CSS3</div>
+      </div>
+      <div class="col-md-3 col-sm-6 col-xs-12 item">
+        <div class="c100 big" data-percent="65">
+        </div>
+        <div class="skill-name">Javascript</div>
+      </div>
+      <div class="col-md-3 col-sm-6 col-xs-12 item">
+        <div class="c100 big" data-percent="80">
+        </div>
+        <div class="skill-name">Vue.js</div>
+      </div>
+
+    </div>
+    <div class="row">
+      <div class="col-md-3 col-sm-6 col-xs-12 item">
+        <div class="c100 big" data-percent="80">
+        </div>
+        <div class="skill-name">移动端开发</div>
+      </div>
+      <div class="col-md-3 col-sm-6 col-xs-12 item">
+        <div class="c100 big" data-percent="85">
+        </div>
+        <div class="skill-name">Bootstrap</div>
+      </div>
+      <div class="col-md-3 col-sm-6 col-xs-12 item">
+        <div class="c100 big" data-percent="50">
+        </div>
+        <div class="skill-name">Nodejs</div>
+      </div>
+      <div class="col-md-3 col-sm-6 col-xs-12 item">
+        <div class="c100 big" data-percent="60">
+        </div>
+        <div class="skill-name">Photoshp</div>
+      </div>
+    </div>
+  </div>
+
+</div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="script/vendor/jquery-3.2.1.js"></script>
 <script src="script/vendor/jquery.sticky.js"></script>
+<script src="script/vendor/percircle.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="script/vendor/bootstrap.js"></script>
 <script src="script/main.js"></script>
