--- a/app/index.html
+++ b/app/index.html
@@ -130,10 +130,8 @@
 </div>
 <div class="skill-area">
   <div class="container">
-    <div class="row">
-      <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
-        <h3>我的技能</h3>
-      </div>
+    <div class="page-header">
+        <h1>我的技能</h1>
     </div>
     <div class="row">
       <div class="col-md-3 col-sm-6 col-xs-12 item">
@@ -182,6 +180,65 @@
     </div>
   </div>
 
+</div>
+<div class="experience-area">
+  <div class="container">
+    <div class="page-header">
+      <h1 id="timeline">项目经历</h1>
+    </div>
+    <ul class="timeline">
+      <li>
+        <div class="timeline-badge"><i class="fa fa-hospital-o"></i></div>
+        <div class="timeline-panel">
+          <div class="timeline-heading">
+            <h4 class="timeline-title">2012年-2014年</h4>
+          </div>
+          <div class="timeline-body">
+            <p>大学毕业后在一家医疗集团工作，负责后端维护和前端切图工作，为公司开发了多个网站及功能，也参与多个页面的前端切图，在此期间也掌不仅学习了后端开发及服务器维护等相关知识，更是为前端打下了坚实基础。</p>
+          </div>
+        </div>
+      </li>
+      <li class="timeline-inverted">
+        <div class="timeline-badge warning"><i class="fa fa-laptop"></i></div>
+        <div class="timeline-panel">
+          <div class="timeline-heading">
+            <h4 class="timeline-title">2015年-2016年</h4>
+          </div>
+          <div class="timeline-body">
+            <p>正所谓百门通不如一门精，于是开始打算从前端方向发展，这段时间做过做过大大小小各种响应式页面，从而更深入的掌握了html5和css3以及Bootstrap。</p>
+            <p>后为一家家政服务公司开发前端系统，首次接触前后端分离技术，PC端页面采用avalon框架开发，首次接触MVVM框架，也了解了git版本管理的相关知识，移动端我则用angular1.5开发。</p>
+            <p>那时候基本上都是一遍撸文档，一遍google,才顺利完成项目的开发，期间遇到了好多坑，都是通过自己解决的。</p>
+            <p>这段时间也趁空闲时间研究过react和react native。</p>
+          </div>
+        </div>
+      </li>
+      <li >
+        <div class="timeline-badge info"><i class="fa fa-shopping-basket"></i></div>
+        <div class="timeline-panel">
+          <div class="timeline-heading">
+            <h4 class="timeline-title">2016年-2017年</h4>
+          </div>
+          <div class="timeline-body">
+            <p>这段时间我所在公司外包给一家水果礼盒的公司开发在线商城系统，我负责整个项目的前端，网站全部采用前后端分离，那时候我干接触vue,于是决定整个项目都用Vue开发,同时也开始接触ES6,webpack等知识。</p>
+            <p>开发过程遇到好多坑，比如spa应用无法调用微信JSDK、手机兼容性等问题，最好还是靠自己解决问题。</p>
+          </div>
+        </div>
+      </li>
+      <li class="timeline-inverted">
+        <div class="timeline-badge danger"><i class="fa fa-code"></i></div>
+        <div class="timeline-panel">
+          <div class="timeline-heading">
+            <h4 class="timeline-title">2017年</h4>
+          </div>
+          <div class="timeline-body">
+            <p>2017年上半年，为公司开发了套微信小程序（由于审核原因未能上线），同时也用白鹭引擎做了个html5页面，采用Typescript,过程主要是一边撸文档一边开发。</p>
+            <p>其与时间主要精力是将商城升级到vue2.0，我在此也接触到了vue ssr（服务端渲染）、PWA等技术</p>
+          </div>
+        </div>
+      </li>
+
+    </ul>
+  </div>
 </div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="script/vendor/jquery-3.2.1.js"></script>
