添加我的作品

--- a/app/index.html
+++ b/app/index.html
@@ -60,9 +60,6 @@
                 <li>
                   <a href="#">我的博客</a>
                 </li>
-                <li>
-                  <a href="#">联系方式</a>
-                </li>
               </ul>
             </div>
           </div>
@@ -194,7 +191,7 @@
             <h4 class="timeline-title">2012年-2014年</h4>
           </div>
           <div class="timeline-body">
-            <p>大学毕业后在一家医疗集团工作，负责后端维护和前端切图工作，为公司开发了多个网站及功能，也参与多个页面的前端切图，在此期间也掌不仅学习了后端开发及服务器维护等相关知识，更是为前端打下了坚实基础。</p>
+            <p>大学毕业后在一家医疗集团工作，负责后端维护和前端切图工作，为公司开发了多个网站及功能，也参与多个页面的前端切图，在此期间不仅学习了后端开发及服务器维护等相关知识，更是为前端打下了坚实基础。</p>
           </div>
         </div>
       </li>
@@ -205,7 +202,7 @@
             <h4 class="timeline-title">2015年-2016年</h4>
           </div>
           <div class="timeline-body">
-            <p>正所谓百门通不如一门精，于是开始打算从前端方向发展，这段时间做过做过大大小小各种响应式页面，从而更深入的掌握了html5和css3以及Bootstrap。</p>
+            <p>正所谓百门通不如一门精，在经历过迷茫期后，毅然决定往前端方向发展，这段时间做过做过大大小小各种响应式页面，从而更深入的掌握了html5和css3以及Bootstrap。</p>
             <p>后为一家家政服务公司开发前端系统，首次接触前后端分离技术，PC端页面采用avalon框架开发，首次接触MVVM框架，也了解了git版本管理的相关知识，移动端我则用angular1.5开发。</p>
             <p>那时候基本上都是一遍撸文档，一遍google,才顺利完成项目的开发，期间遇到了好多坑，都是通过自己解决的。</p>
             <p>这段时间也趁空闲时间研究过react和react native。</p>
@@ -238,6 +235,27 @@
       </li>
 
     </ul>
+  </div>
+</div>
+<div class="works-area">
+  <div class="container">
+    <div class="page-header">
+      <h1>我的作品</h1>
+    </div>
+    <div class="row">
+      <div class="mix col-md-4 col-lg-4 col-sm-6 col-xs-12 design">
+        <div class="single-gallery">
+          <div class="gallery-img">
+            <img src="images/work/01.png" alt="">
+          </div>
+          <a href="http://www.gogagoga.cc" target="_blank" class="gallery-overlay">
+            <h4>果加果加商城</h4>
+            <p>果加果加商城，用vue开发，前后端分离。</p>
+          </a>
+        </div>
+
+      </div>
+    </div>
   </div>
 </div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
