--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
   <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
   <![endif]-->
 </head>
-<body>
+<body >
 <!--preloader start-->
   <div class="preloader" id="preloader">
     <div class="p-circle"></div>
@@ -40,22 +40,22 @@
               </button>
               <a href="#" class="navbar-brand">Xuxcf</a>
             </div>
-            <div class="collapse navbar-collapse bs-example-js-navbar-scrollspy">
-              <ul id="nav">
+            <div class="collapse navbar-collapse bs-example-js-navbar-scrollspy" id="header-navbar">
+              <ul id="nav"  role="tablist" class="nav navbar-nav">
                 <li>
-                  <a href="#">首页</a>
+                  <a href="#welcome">首页</a>
                 </li>
                 <li>
-                  <a href="#">个人简介</a>
+                  <a href="#about">个人简介</a>
                 </li>
                 <li>
-                  <a href="#">专业技能</a>
+                  <a href="#skill">专业技能</a>
                 </li>
                 <li>
-                  <a href="#">项目经验</a>
+                  <a href="#experience">项目经验</a>
                 </li>
                 <li>
-                  <a href="#">我的作品</a>
+                  <a href="#works">我的作品</a>
                 </li>
                 <li>
                   <a href="#">我的博客</a>
@@ -68,7 +68,7 @@
     </div>
   </div>
 
-  <div class="welcome-area">
+  <div class="welcome-area" id="welcome">
     <div class="container">
       <div class="row">
         <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
@@ -96,7 +96,7 @@
     </div>
   </div>
 </header>
-<div class="about-area">
+<div class="about-area" id="about">
   <div class="container">
     <div class="row about-details-content">
       <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
@@ -125,7 +125,7 @@
     </div>
   </div>
 </div>
-<div class="skill-area">
+<div class="skill-area" id="skill">
   <div class="container">
     <div class="page-header">
         <h1>我的技能</h1>
@@ -178,7 +178,7 @@
   </div>
 
 </div>
-<div class="experience-area">
+<div class="experience-area" id="experience">
   <div class="container">
     <div class="page-header">
       <h1 id="timeline">项目经历</h1>
@@ -237,7 +237,7 @@
     </ul>
   </div>
 </div>
-<div class="works-area">
+<div class="works-area" id="works">
   <div class="container">
     <div class="page-header">
       <h1>我的作品</h1>
@@ -262,6 +262,7 @@
 <script src="script/vendor/jquery-3.2.1.js"></script>
 <script src="script/vendor/jquery.sticky.js"></script>
 <script src="script/vendor/percircle.js"></script>
+<script src="script/vendor/jquery.easing.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="script/vendor/bootstrap.js"></script>
 <script src="script/main.js"></script>
