--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-  <title>Bootstrap 101 Template</title>
+  <title>xuxcf的简历</title>
 
   <!-- Bootstrap -->
   <link href="./styles/bootstrap.css" rel="stylesheet">
@@ -253,11 +253,30 @@
             <p>果加果加商城，用vue开发，前后端分离。</p>
           </a>
         </div>
+      </div>
+      <div class="mix col-md-4 col-lg-4 col-sm-6 col-xs-12 design">
+        <div class="single-gallery">
+          <div class="gallery-img">
+            <img src="images/work/02.png" alt="">
+          </div>
+          <a href="javascript:void()" target="_blank" class="gallery-ewm">
+            <div class="w-qr">
+              <img src="images/goga-qr.png" alt="">
+              微信扫一扫
+            </div>
 
+            <h4>果加果加商城微信端</h4>
+            <p>果加果加商城，用vue1.0开发，SPA应用。</p>
+          </a>
+        </div>
       </div>
     </div>
   </div>
 </div>
+<div class="footer-top"></div>
+<footer class="footer-area">
+  <p>© Copyright 2017 - <a href="http://www.xuxcf.cc">Xuxcf</a> All Right Reserved.</p>
+</footer>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="script/vendor/jquery-3.2.1.js"></script>
 <script src="script/vendor/jquery.sticky.js"></script>
