--- a/app/index.html
+++ b/app/index.html
@@ -270,6 +270,22 @@
           </a>
         </div>
       </div>
+      <div class="mix col-md-4 col-lg-4 col-sm-6 col-xs-12 design">
+        <div class="single-gallery">
+          <div class="gallery-img">
+            <img src="images/work/03.png" alt="">
+          </div>
+          <a href="javascript:void()" target="_blank" class="gallery-ewm">
+            <div class="w-qr">
+              <img src="images/goga-qr-02.png" alt="">
+              微信扫一扫
+            </div>
+
+            <h4>果加果加html5专题</h4>
+            <p>果加果加html5专题，用白鹭引擎开发，采用typescript。</p>
+          </a>
+        </div>
+      </div>
     </div>
   </div>
 </div>
