--- a/app/index.html
+++ b/app/index.html
@@ -83,8 +83,8 @@
             </a>
           </div>
           <div class="call-me">
-            <a href="" download><i class="fa fa-download"></i>&nbsp;下载简历</a>
-            <a href="" download><i class="fa fa-envelope-o" aria-hidden="true"></i>&nbsp;发送邮件</a>
+            <a href="images/myResume.pdf" download><i class="fa fa-download"></i>&nbsp;下载简历</a>
+            <a href="mailto:xuxcf2010@163.com" ><i class="fa fa-envelope-o" aria-hidden="true"></i>&nbsp;发送邮件</a>
           </div>
         </div>
       </div>
@@ -240,17 +240,17 @@
 <div class="works-area" id="works">
   <div class="container">
     <div class="page-header">
-      <h1>我的作品</h1>
+      <h1>我的部分作品</h1>
     </div>
     <div class="row">
       <div class="mix col-md-4 col-lg-4 col-sm-6 col-xs-12 design">
         <div class="single-gallery">
           <div class="gallery-img">
-            <img src="images/work/01.png" alt="">
+            <img src="images/work/05.png" alt="">
           </div>
-          <a href="http://www.gogagoga.cc" target="_blank" class="gallery-overlay">
-            <h4>果加果加商城</h4>
-            <p>果加果加商城，用vue开发，前后端分离。</p>
+          <a href="http://xxcf.oschina.io/mofangqianduanxiangmu/" target="_blank" class="gallery-overlay">
+            <h4>魔方展会商城前端</h4>
+            <p>魔方展会商城，我负责网站架构和前端开发</p>
           </a>
         </div>
       </div>
@@ -273,9 +273,21 @@
       <div class="mix col-md-4 col-lg-4 col-sm-6 col-xs-12 design">
         <div class="single-gallery">
           <div class="gallery-img">
+            <img src="images/work/01.png" alt="">
+          </div>
+          <a href="http://www.gogagoga.cc" target="_blank" class="gallery-overlay">
+            <h4>果加果加商城</h4>
+            <p>果加果加商城，用vue开发，前后端分离。</p>
+          </a>
+        </div>
+      </div>
+
+      <div class="mix col-md-4 col-lg-4 col-sm-6 col-xs-12 design">
+        <div class="single-gallery">
+          <div class="gallery-img">
             <img src="images/work/03.png" alt="">
           </div>
-          <a href="javascript:void()" target="_blank" class="gallery-ewm">
+          <a href="javascript:void(0)" target="_blank" class="gallery-ewm">
             <div class="w-qr">
               <img src="images/goga-qr-02.png" alt="">
               微信扫一扫
@@ -283,6 +295,34 @@
 
             <h4>果加果加html5专题</h4>
             <p>果加果加html5专题，用白鹭引擎开发，采用typescript。</p>
+          </a>
+        </div>
+      </div>
+      <div class="mix col-md-4 col-lg-4 col-sm-6 col-xs-12 design">
+        <div class="single-gallery">
+          <div class="gallery-img">
+            <img src="images/work/04.png" alt="">
+          </div>
+          <a href="https://github.com/ciming/generator-gulp-less-bootstrap" target="_blank" class="gallery-overlay">
+            <h4>generator-gulp-less-bootstrap</h4>
+            <p>bootstrap前端构建工具，yeoman开发</p>
+          </a>
+        </div>
+      </div>
+
+      <div class="mix col-md-4 col-lg-4 col-sm-6 col-xs-12 design">
+        <div class="single-gallery">
+          <div class="gallery-img">
+            <img src="images/work/6.png" alt="">
+          </div>
+          <a href="javascript:void(0)" target="_blank" class="gallery-ewm">
+            <div class="w-qr">
+              <img src="images/goga-qr-03.png" alt="">
+              微信扫一扫
+            </div>
+
+            <h4>果加果加蓝莓团购</h4>
+            <p>微信团购页面，采用vue开发。</p>
           </a>
         </div>
       </div>
