--- a/app/index.html
+++ b/app/index.html
@@ -191,7 +191,7 @@
             <h4 class="timeline-title">2012年-2014年</h4>
           </div>
           <div class="timeline-body">
-            <p>大学毕业后在一家医疗集团工作，负责后端维护和前端切图工作，为公司开发了多个网站及功能，也参与多个页面的前端切图，在此期间不仅学习了后端开发及服务器维护等相关知识，更是为前端打下了坚实基础。</p>
+            <p>我在在该公司负责服务器维护网站开发以及前端切图工作，为公司开发了多个网站及功能，也负责参与多个专题页面的前端切图，在此期间不仅学习了后端开发及服务器维护等相关知识，更是为前端打下了坚实基础。 </p>
           </div>
         </div>
       </li>
