--- a/app/index.html
+++ b/app/index.html
@@ -102,12 +102,16 @@
       <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
         <div class="about-details-content">
           <h4>欢迎查看我的简历</h4>
-          <p>我是一个性格沉稳、做事认真的人。</p>
-          <p>我喜欢研究所碰到的各种技术，挑战更更有难度的项目。</p>
-          <p>我有两年多端开发经验，熟悉 HTML、CSS、Javascript，能熟练开发符合 W3C 标准的页面，熟练使用 Vue, jQuery 框架, 曾用vue做过多个前后端分离项目。</p>
-          <p>我了解后端技术，在从事前端之前用php开发过网站，之后用nodejs和express开发过个人博客。</p>
-          <p>有 Linux 基础，对服务器端开发有一定了解，能够配合程序员完成相关工作。</p>
-          <p>熟悉gulp,webpack等前端构建工具。</p>
+            <p>•我目前有超过3年的前端开发经验，曾独立负责多个大型商城的前端开发工作。</p>
+            <p>•使用HTML/HTML5, DHTML, XHTML, CSS/CSS3 和JavaScript, jQuery ,Vue.js开发符合 W3C 标准和浏览器器兼容。</p>
+            <p>•具有响应式网页设计技术（如Vue，jQuery，jQuery Mobile，Node.js，Bootstrap，HTML，XHTML，DHTML，CSS，XML，XSL，XSLT，JavaScript，AJAX和JSON）的丰富经验。</p>
+            <p>•对JavaScript全栈有一定的研究（Mongo, Express, Vue SSR, Node）。</p>
+            <p>•有实现和处理RESTful API的经验。</p>
+            <p>•熟悉Vue.js（vue+vue router +vuex）及其原理。</p>
+            <p>•有使用CSS预处理器（如less和postcss）以及JavaScript任务运行程序（如gulp，webpack）的经验。</p>
+            <p>•对网站优化，减少用户访问响应时间，增强用户体验有一定经验。</p>
+            <p>•熟悉sql数据库查询语言。</p>
+            <p>•熟练使用git来维护源码。</p>
         </div>
       </div>
       <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
