--- a/app/index.html
+++ b/app/index.html
@@ -82,10 +82,10 @@
               Tel: 15268636630
             </a>
           </div>
-          <div class="call-me">
+          <!-- <div class="call-me">
             <a href="images/myResume.pdf" download><i class="fa fa-download"></i>&nbsp;下载简历</a>
             <a href="mailto:xuxcf2010@163.com" ><i class="fa fa-envelope-o" aria-hidden="true"></i>&nbsp;发送邮件</a>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -104,13 +104,12 @@
           <h4>欢迎查看我的简历</h4>
             <p>•我目前有超过3年的前端开发经验，曾独立负责多个大型商城的前端开发工作。</p>
             <p>•使用HTML/HTML5, DHTML, XHTML, CSS/CSS3 和JavaScript, jQuery ,Vue.js开发符合 W3C 标准和浏览器器兼容。</p>
-            <p>•具有响应式网页设计技术（如Vue，jQuery，jQuery Mobile，Node.js，Bootstrap，HTML，XHTML，DHTML，CSS，XML，XSL，XSLT，JavaScript，AJAX和JSON）的丰富经验。</p>
-            <p>•对JavaScript全栈有一定的研究（Mongo, Express, Vue SSR, Node）。</p>
+            <p>•具有响应式网页设计经验（如Vue，jQuery，jQuery Mobile，Node.js，Bootstrap，HTML，XHTML，DHTML，CSS，XML，XSL，XSLT，JavaScript，AJAX和JSON）的丰富经验。</p>
+            <p>•对JavaScript全栈有一定的研究（Mongo, Koa, Express, Vue SSR, Node）。</p>
             <p>•有实现和处理RESTful API的经验。</p>
             <p>•熟悉Vue.js（vue+vue router +vuex）及其原理。</p>
-            <p>•有使用CSS预处理器（如less和postcss）以及JavaScript任务运行程序（如gulp，webpack）的经验。</p>
+            <p>•有使用CSS预处理器（如less、postcss、nextcss）以及JavaScript任务运行程序（如gulp，webpack, rollup.js）的经验。</p>
             <p>•对网站优化，减少用户访问响应时间，增强用户体验有一定经验。</p>
-            <p>•熟悉sql数据库查询语言。</p>
             <p>•熟练使用git来维护源码。</p>
         </div>
       </div>
@@ -121,8 +120,9 @@
             <li><strong><span>邮箱：</span></strong>xuxcf2010@163.com</li>
             <li><strong><span>手机：</span></strong>15268636630</li>
             <li><strong><span>生日：</span></strong>1991-10-12</li>
-            <li><strong><span>居住地：</span></strong>浙江温州</li>
+            <li><strong><span>现居地：</span></strong>浙江杭州</li>
             <li><strong><span>github：</span></strong><a href="https://github.com/ciming" target="_blank">https://github.com/ciming</a></li>
+            <li><strong><span>npm：</span></strong><a href="https://www.npmjs.com/~ciming" target="_blank">https://www.npmjs.com/~ciming</a></li>
           </ul>
         </div>
       </div>
@@ -203,13 +203,11 @@
         <div class="timeline-badge warning"><i class="fa fa-laptop"></i></div>
         <div class="timeline-panel">
           <div class="timeline-heading">
-            <h4 class="timeline-title">2015年-2016年</h4>
+            <h4 class="timeline-title">2015年-2017年</h4>
           </div>
           <div class="timeline-body">
-            <p>正所谓百门通不如一门精，在经历过迷茫期后，毅然决定往前端方向发展，这段时间做过做过大大小小各种响应式页面，从而更深入的掌握了html5和css3以及Bootstrap。</p>
-            <p>后为一家家政服务公司开发前端系统，首次接触前后端分离技术，PC端页面采用avalon框架开发，首次接触MVVM框架，也了解了git版本管理的相关知识，移动端我则用angular1.5开发。</p>
-            <p>那时候基本上都是一遍撸文档，一遍google,才顺利完成项目的开发，期间遇到了好多坑，都是通过自己解决的。</p>
-            <p>这段时间也趁空闲时间研究过react和react native。</p>
+            <p>我在一个小型网络公司当仍前端开发，任职期间负责过P2P网站，O2O家政服务网站，O2O线上水果商城网站。</p>
+            <p>项目期间我接触了Vue、avalon、angular.js等MVVM框架，并用这些框架开发了多个应用</p>
           </div>
         </div>
       </li>
@@ -217,27 +215,14 @@
         <div class="timeline-badge info"><i class="fa fa-shopping-basket"></i></div>
         <div class="timeline-panel">
           <div class="timeline-heading">
-            <h4 class="timeline-title">2016年-2017年</h4>
+            <h4 class="timeline-title">2017年-2018年</h4>
           </div>
           <div class="timeline-body">
-            <p>这段时间我所在公司外包给一家水果礼盒的公司开发在线商城系统，我负责整个项目的前端，网站全部采用前后端分离，那时候我干接触vue,于是决定整个项目都用Vue开发,同时也开始接触ES6,webpack等知识。</p>
-            <p>开发过程遇到好多坑，比如spa应用无法调用微信JSDK、手机兼容性等问题，最好还是靠自己解决问题。</p>
+            <p>2017年中旬，应为温州发展受限，我决然来到杭州工作。</p>
+            <p>在此期间我主要是巩固了js基础，对es6有了更深入的了解，并且在工作之余写了多个小应用。</p>
           </div>
         </div>
       </li>
-      <li class="timeline-inverted">
-        <div class="timeline-badge danger"><i class="fa fa-code"></i></div>
-        <div class="timeline-panel">
-          <div class="timeline-heading">
-            <h4 class="timeline-title">2017年</h4>
-          </div>
-          <div class="timeline-body">
-            <p>2017年上半年，为公司开发了套微信小程序（由于审核原因未能上线），同时也用白鹭引擎做了个html5页面，采用Typescript,过程主要是一边撸文档一边开发。</p>
-            <p>其与时间主要精力是将商城升级到vue2.0，我在此也接触到了vue ssr（服务端渲染）、PWA等技术</p>
-          </div>
-        </div>
-      </li>
-
     </ul>
   </div>
 </div>
@@ -252,7 +237,7 @@
           <div class="gallery-img">
             <img src="images/work/05.png" alt="">
           </div>
-          <a href="http://xxcf.oschina.io/mofangqianduanxiangmu/" target="_blank" class="gallery-overlay">
+          <a href="http://mfdjw.com" target="_blank" class="gallery-overlay">
             <h4>魔方展会商城前端</h4>
             <p>魔方展会商城，我负责网站架构和前端开发</p>
           </a>
@@ -307,9 +292,9 @@
           <div class="gallery-img">
             <img src="images/work/04.png" alt="">
           </div>
-          <a href="https://github.com/ciming/generator-gulp-less-bootstrap" target="_blank" class="gallery-overlay">
-            <h4>generator-gulp-less-bootstrap</h4>
-            <p>bootstrap前端构建工具，yeoman开发</p>
+          <a href="https://www.npmjs.com/~ciming" target="_blank" class="gallery-overlay">
+            <h4>我发布的npm包</h4>
+            <p>这是我在开发过程中发布的的一些npm包</p>
           </a>
         </div>
       </div>
