修改错别字

--- a/app/index.html
+++ b/app/index.html
@@ -206,7 +206,7 @@
             <h4 class="timeline-title">2015年-2017年</h4>
           </div>
           <div class="timeline-body">
-            <p>我在一个小型网络公司当仍前端开发，任职期间负责过P2P网站，O2O家政服务网站，O2O线上水果商城网站。</p>
+            <p>我在一个小型网络公司担任前端开发，任职期间负责过P2P网站，O2O家政服务网站，O2O线上水果商城网站。</p>
             <p>项目期间我接触了Vue、avalon、angular.js等MVVM框架，并用这些框架开发了多个应用</p>
           </div>
         </div>
